--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -9,14 +9,14 @@ jobs:
     permissions: write-all
     runs-on: ubuntu-24.04
     steps:
-      - name: Pulling the source
-        uses: actions/checkout@v2
+      - name: Pulling the new commit
+        uses: actions/checkout@v4
       - name: Setting up Haxe
         uses: krdlab/setup-haxe@v2
         with:
           haxe-version: 4.3.7
       - name: Restore existing build cache for faster compilation
-        uses: actions/cache@v3
+        uses: actions/cache@v4.2.3
         with:
           # not caching the bin folder to prevent asset duplication and stuff like that
           key: cache-build-linux
@@ -24,8 +24,8 @@ jobs:
             .haxelib/
             export/release/linux/haxe/
             export/release/linux/obj/
-          restore-keys: |
-            cache-build-linux
+      - run: |
+          echo "HXCPP_COMPILE_CACHE=~/.hxcpp" >> $GITHUB_ENV
       - name: Installing LibVLC
         run: |
           sudo apt-get install libvlc-dev libvlccore-dev
@@ -67,7 +67,7 @@ jobs:
               }
             }
       - name: Uploading new cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4.2.3
         with:
           # caching again since for some reason it doesnt work with the first post cache shit
           key: cache-build-linux
@@ -75,5 +75,3 @@ jobs:
             .haxelib/
             export/release/linux/haxe/
             export/release/linux/obj/
-          restore-keys: |
-            cache-build-linux
